<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="#AC73E8"> <!-- Fondo morado más saturado -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".Register">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="#000000"
                android:textSize="18sp"
                app:backgroundTint="#A0FFFFFF"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_person"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="#000000"
                android:textSize="18sp"
                app:backgroundTint="#A0FFFFFF"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_person"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="#000000"
                android:textSize="18sp"
                app:backgroundTint="#A0FFFFFF"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_mail"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="#000000"
                android:textSize="18sp"
                app:backgroundTint="#A0FFFFFF"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cellphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cellphone"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="18sp"
                app:backgroundTint="#A0FFFFFF"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Ingresa Tu Dirección"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_location"></TextView>



        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:backgroundTint="#FFFFFFFF"
            android:background="#FFFFFFFF"
            android:drawableStart="@drawable/ic_location"
            app:layout_constraintTop_toBottomOf="@id/cellphone"
            android:hint="Ingresa Tu Direccion"/>










        <RadioGroup
            android:id="@+id/userTypeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/radioWorker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worker"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/radioClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client"
                android:textStyle="bold"
                android:textSize="20dp"/>
        </RadioGroup>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Inserte una selfie"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20dp"/>



        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_selfie"
            android:layout_gravity="center"
            android:background="@drawable/rounded_image_button"

            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/click_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
</ScrollView>
